# esp-va-sdk

./: CHANGELOG.md  LICENSE  README.md
board_support_pkgs/esp32_lyratd_dspg/audio_board/audio_board_lyratd_dspg/: audio_board.cmake
board_support_pkgs/esp32_lyratd_dspg/audio_board/audio_board_lyratd_dspg/audio_board_dspg/: CMakeLists.txt  va_board.c
board_support_pkgs/esp32_lyratd_dspg/dsp_driver/dspg_driver/components/dbmd5-ipc/: CMakeLists.txt
board_support_pkgs/esp32_lyratd_dspg/dsp_driver/dspg_driver/components/va_dsp/: CMakeLists.txt
board_support_pkgs/esp32_lyratd_dspg/led_driver/is31fl3236/: is31fl3236.c
board_support_pkgs/esp32_vaquita_dspg/audio_board/audio_board_vaquita_dspg/: audio_board.cmake  audio_board.mk
board_support_pkgs/esp32_vaquita_dspg/audio_board/audio_board_vaquita_dspg/audio_board_vaquita_dspg/: CMakeLists.txt  va_board.c
board_support_pkgs/esp32_vaquita_dspg/led_driver/neo_pixel_led/: neo_pixel_led.c  neo_pixel_led.h
components/audio_hal/audio_board/audio_board_ai_thinker_audio_kit_v2_2/: audio_board.cmake  audio_board.mk
components/audio_hal/audio_board/audio_board_ai_thinker_audio_kit_v2_2/audio_board/: audio_board.c  va_board.c
components/audio_hal/esp_codec/ac101/: esp_codec.c  esp_codec.h  media_hal_codec_init.c
components/audio_hal/esp_codec/es8311/components/codec_es8311/: es8311.c  es8311.h  media_hal_codec_init.c
components/audio_hal/include/: va_board.h
components/audio_pipeline/: audio_pipeline.h
components/basic_player/: basic_player.c
components/codecs/: CMakeLists.txt
components/codecs/include/: aac_decoder.h  amr_decoder.h  amrnb_encoder.h  amrwb_encoder.h  audio_codec.h  mp3_decoder.h  opus_decoder.h  opus_encoder.h  wav_decoder.h
components/esp-downmix/: CMakeLists.txt
components/media_hal/: media_hal_playback.c
components/misc/: CMakeLists.txt  va_button.c  va_button.h  va_diag_cli.c
components/ssdp/: CMakeLists.txt
components/streams/http_stream/: http_hls.c  http_hls.h  http_playback_stream.c  http_playlist.c  http_playlist.h
components/sys_playback/: sys_playback.c
components/utils/: CMakeLists.txt
components/utils/src/: basic_rb.c  m3u8_parser.c  pls_parser.c  special_rb.c
components/uuid-gen/src/: UUIDGeneration.c
components/voice_assistant/: CMakeLists.txt  component.mk
components/voice_assistant/include/: aia.h  alexa.h  avs_config.h  voice_assistant.h
examples/amazon_aia/: CMakeLists.txt  Makefile  partitions.csv  partitions_mkspiffs.csv  sdkconfig.defaults
examples/amazon_aia/main/: CMakeLists.txt  Kconfig.projbuild  app_aws_iot.c  app_cloud_agent.h  app_main.c  app_ota.c  app_ota.h  app_va_cb.c
examples/common/: CMakeLists.txt  app_cloud.h  app_cloud_rainmaker.c  app_prov.c  app_wifi.c  app_wifi.h
myExamples/amazon_aia/: sdkconfig
